---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/typedef/test_void_type_alias_for_zero_parameter_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_void_type_alias_for_zero_parameter_function.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (typedef v `void`)
   (declaration f~1 `fn(∅: void) -> void` ∅)
   (function-definition
      f~1 `fn(∅: void) -> void`
      (params
         f.unnamed_parameter.0~4 `void`)
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "f")))))
   (declaration g~5 `fn(∅: fn(∅: void) -> void) -> void` ∅)
   (function-definition
      g~5 `fn(v: fn(∅: void) -> void) -> void`
      (params
         v~8 `fn(∅: void) -> void`)
      (compound-statement
         (expression (call (name v~8 `fn(∅: void) -> void`)))))
   (function-definition
      print_g~9 `fn(∅: void) -> void`
      (params
         print_g.unnamed_parameter.0~11 `void`)
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "g")))))
   (function-definition
      main~12 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn(∅: void) -> void`)))
         (expression
            (call (name g~5 `fn(v: fn(∅: void) -> void) -> void`)
               (name print_g~9 `fn(∅: void) -> void`))))))

----- stderr -----
